<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.work.caferoyale.Order"
    android:background="@android:color/darker_gray">


    <Button
        android:textColor="#FFFFFF"
        android:background="@color/colorAccent"
        android:onClick="viewOrder"
        android:text="@string/vieworder"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/viewOrder"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/order1" />

    <Button
        android:textColor="#FFFFFF"
        android:background="@color/colorAccent"
        android:onClick="orderNow"
        android:text="@string/ordernow"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:id="@+id/order1"
        android:layout_above="@+id/viewOrder"
        android:layout_centerHorizontal="true" />



    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/phone"
        android:layout_alignStart="@+id/phone"
        android:layout_marginTop="20dp"
        android:id="@+id/drink"
        android:hint="@string/drink"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="19dp"
        android:id="@+id/meal" android:hint="@string/meal"
        android:layout_below="@+id/drink"
        android:layout_alignStart="@+id/drink" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="22dp"
        android:id="@+id/others"
        android:layout_below="@+id/meal"
        android:layout_alignStart="@+id/meal"
        android:hint="@string/others"/>

    <TextView
        android:text="@string/pleasechoose"
        android:textSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/name"
        android:id="@+id/textView"
         />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="44dp"
        android:id="@+id/phone"
        android:hint="@string/phone"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
