<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.work.caferoyale.ViewOrder"
    android:background="@android:color/darker_gray">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_marginTop="31dp"
        android:id="@+id/ed"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/button"
        android:hint="@string/phone"/>

    <Button
        android:textColor="#FFFFFF"
        android:text="@string/viewmyorder"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:id="@+id/button"
        android:background="@color/colorAccent"
        android:onClick="viewMyOrder"
        android:layout_below="@+id/ed"
        android:layout_centerHorizontal="true" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:textColor="#FFFFFF"
        android:text="@string/changemyorder"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:background="@color/colorAccent"
        android:onClick="changeOrder"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/button" />


</RelativeLayout>
