<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_locale"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.work.caferoyale.Settings_locale"
    android:background="@android:color/darker_gray">


    <Button

           android:id="@+id/ar"
        android:textColor="#FFFFFF"

        android:layout_width="200dp"


        android:background="@color/colorAccent"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/button"
        android:text="@string/arabic"

        android:layout_height="wrap_content"
        android:layout_below="@+id/lang"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:onClick="changeArabic" />

    <Button
        android:textColor="#FFFFFF"
        android:layout_width="200dp"
        android:background="@color/colorAccent"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/button"
        android:text="@string/english"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/ar"
        android:id="@+id/en"
        android:onClick="changeEnglish"
        />

    <TextView
        android:text="@string/changelanguage"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="53dp"
        android:id="@+id/lang"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="DeveLoped By HTech . "/>
    </android.support.v7.widget.Toolbar>

</RelativeLayout>
