<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.work.caferoyale.AboutUs"
    android:background="@android:color/darker_gray">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@drawable/aboutus4"
        android:id="@+id/imageView4"
  />

    <TextView
        android:text="@string/cafe"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="33dp"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="31dp"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView4"
        android:layout_toEndOf="@+id/textView2"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="21dp" />

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="DeveLoped By HTech . "/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:text="@string/we"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
