<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.work.caferoyale.ContactUS"
    android:background="@android:color/darker_gray">


    <TextView
        android:id="@+id/tv1"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/textView3"
        android:layout_below="@+id/tv1"

        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="18dp"
        android:textColor="#f44336"/>

    <TextView
        android:linksClickable="true"
        android:text="cafeRoyale@Gmail.com"

        android:autoLink="email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="14dp"
        android:id="@+id/tv3"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget" />

    <TextView
        android:text="elhosiny.abdelhamid@gmail.com"
        android:autoLink="email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv3"
        android:layout_alignStart="@+id/tv3"
        android:layout_marginTop="14dp"
        android:id="@+id/tv4"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"

        android:text="@string/tele"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="18dp"
        android:textColor="#f44336"
        android:id="@+id/tv5"
        android:layout_below="@+id/tv4"
        android:layout_alignParentStart="true" />

    <TextView
        android:linksClickable="true"
        android:text="22222222"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="14dp"
        android:id="@+id/tv6"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget" />

    <TextView
        android:text="60367951"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv6"
        android:layout_alignStart="@+id/tv3"
        android:layout_marginTop="14dp"

        android:id="@+id/tv7"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget" />

    <ImageView
        android:background="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/facebook1"
        android:id="@+id/imageView"
        android:onClick="openFaceBook"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginBottom="16dp" />

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/twitter1"
        android:id="@+id/imageView2"
        android:onClick="openTwitter"
        android:layout_alignTop="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/instagram"
        android:id="@+id/imageView3"
        android:onClick="openInstagram"
        android:layout_alignTop="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2"
        android:layout_marginStart="12dp" />


</RelativeLayout>
